<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2cbridge</name>
  <version>0.0.1</version>
  <description>Bridge for dynamically configuring I2C with ROS2</description>
  <maintainer email="devs@mwaverecycling.com">MWave Recycling LLC</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>mwave_util</build_depend>
  <build_depend>mwave_config</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>mwave_util</exec_depend>
  <exec_depend>mwave_config</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
