<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mwave_orchestrator</name>
  <version>0.0.1</version>
  <description>Orchestrator node package</description>
  <maintainer email="devs@mwaverecycling.com">MWave Recycling</maintainer>
  <license>Apache License 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>mwave_messages</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
