<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mwave_util</name>
  <version>0.0.1</version>
  <description>Some ROS2 utilities</description>
  <maintainer email="devs@mwaverecycling.com">MWave Recycling</maintainer>
  <license>MIT License</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
